# docs

./: README.md
livox-csvCapture/: README.md  pointcloud_to_pcd.cpp
points-cascade-matching/: test.cpp
wtg-old/no-pcl-core/.ipynb_checkpoints/: testing-01-checkpoint.ipynb
wtg-old/no-pcl-core/datasets/07-01/set1/: 50645000.pcd  50745000.pcd
wtg-old/no-pcl-core/datasets/07-01/set2/: 50944000.pcd  51044000.pcd  51148000.pcd  51250000.pcd
wtg-old/no-pcl-core/datasets/07-01/set3/: 51744000.pcd  51844000.pcd
wtg-old/no-pcl-core/datasets/07-01/set4/: 52944000.pcd  52944000.txt  53045000.pcd  53145000.pcd
wtg-old/no-pcl-core/datasets/07-01/set5/: 53444000.pcd  53544000.pcd  53644000.pcd  53745000.pcd
wtg-old/no-pcl-core/datasets/07-01/set6/: 55045000.pcd  55144000.pcd  55245000.pcd  55345000.pcd
wtg-old/no-pcl-core/datasets/07-01/set7/: 61044000.pcd  61145000.pcd  61244000.pcd  61344000.pcd  61446000.pcd
wtg-old/pcl-core/: parametric.cpp  read_pcd.cpp
wtg-old/pcl-core/3point-approach/mk1/: README.md
wtg-old/pcl-core/3point-approach/mk1/p1/: CMakeLists.txt  src-mod.cpp  src.cpp
wtg-old/pcl-core/3point-approach/mk1/r1/: src.cpp
wtg-old/pcl-core/bbox/: CMakeLists.txt  src.cpp  test.pcd
wtg-old/pcl-core/border1/p1-border-estimation/: src.cpp
wtg-old/pcl-core/border1/p2-segmentation-ProgressiveMorphologicalFilter/: src.cpp
wtg-old/pcl-core/border1/testcase/set1/: 114938000.pcd  115038000.pcd  115138000.pcd
wtg-old/pcl-core/border1/testcase/set2/: 122447000.pcd  122547000.pcd  (+1 more)
wtg-old/pcl-core/esstimateGASD/: CMakeLists.txt  src.cpp  src2.cpp
(+16 files in other folders)
